--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-katex": "^3.0.1",
     "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "@types/react-katex": "^3.0.0"
   }
 }
